Add skills section with icons to portfolio page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
    <nav>
@@ -20,5 +21,69 @@
 
         <a href="#contact" class="btn">Contact Me</a>
    </nav>
+
+   <section id="home">
+        <img src="./images/image.png" alt="img">
+
+        <div class="info-box">
+            <h1><span>Hello, I am King</span></h1>
+
+            <h3><span>Web Developer</span>based in India</h3>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae assumenda id natus cum nam enim dicta voluptas repellendus ut corrupti quis rem consequuntur repellat et rerum culpa recusandae minus dignissimos, aut totam.</p>
+        </div>
+        <div class="btn-box">
+            <div class="btn">Hire</div>
+            <div class="btn">Conatct Me</div>
+        </div>
+
+   </section>
+
+   <section id="about">
+        <div class="about-box">
+            <div class="about-info">
+                <h1><span>About Me</span></h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam iste eos sit autem tenetur dolorem, molestiae enim suscipit et earum saepe magni. Porro nihil tenetur neque hic ea deleniti sit quidem beatae.</p>
+            </div>
+            <h2><span>Skills</span></h2>
+
+            <div class="skills">
+                <ul>
+                    <li>
+                        <span><i class='bxr  bx-chevron-right'  ></i> HTML</span>
+                    </li>
+
+                    <li>
+                        <span><i class='bxr  bx-chevron-right'  ></i> CSS</span>
+                    </li>
+                    <li>
+                        <span><i class='bxr  bx-chevron-right'  ></i> JavaScript</span>
+                    </li>
+                    <li>
+                        <span><i class='bxr  bx-chevron-right'  ></i> React</span>
+                    </li>
+                </ul>
+
+                <ul>
+                    <li>
+                        <span><i class='bxr  bx-chevron-right'  ></i> Flask</span>
+                    </li>
+
+                    <li>
+                        <span><i class='bxr  bx-chevron-right'  ></i> MySQL</span>
+                    </li>
+
+                    <li>
+                        <span><i class='bxr  bx-chevron-right'  ></i> Git</span>
+                    </li>
+                    <li>
+                        <span><i class='bxr  bx-chevron-right'  ></i> GitHub</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <img src="./images/image.png" alt="img">
+   </section>
 </body>
 </html>
